# CodePlayground

./: .gitmodules  CMakeLists.txt  README.md
C-Sharp-Playground/: Math.cs  Playground.csproj  Program.cs
C-Sharp-Playground/Code/: AddBinary.cs  AddTwoNums.cs  BackspaceCompare.cs  ClimbStairs.cs  CompareBinaryTree.cs  FindCycleInLinkedList.cs  FirstOccuranceIndex.cs  GetInterseciton.cs  HasPathSum.cs  HeightBalancedBinaryTree.cs  InOrderTransversal.cs  IsBalancedBinaryTree.cs  LengthOfLastWord.cs  LongestCommonPrefix.cs  MaxDepthOfBinaryTree.cs  MaxProfit.cs  MergeList.cs  MergeSortedArray.cs  MinDepthOfaBT_ToNearestlLeafNode.cs  MinMaxSum.cs  NumberPalindromeChecker.cs  PaschalsTriangle.cs  PaschalsTriangleV2.cs  PlusMinusRatio.cs  PlusOne.cs  PostOrderTraveral.cs  PreorderTraversal.cs  RecordCounter.cs  RemoveElement.cs  RemoveListDuplicates.cs  RomanToInt.cs  RootToLeafTargetSum.cs  SearchInsertPosition.cs  SingleNumberSlidingWindow.cs  SqrtConverter.cs  SymmetricTree.cs  TwoNumSum.cs  ValidPalindromeChecker.cs
C-Sharp-Playground/Tests/: Tests.cs
CPP_Playground/CPP_Workspace.xcworkspace/: contents.xcworkspacedata
CPP_Playground/Code/: floatingPointTypes.cpp  iterations.cpp  pointers.cpp  qualifiers.cpp  (+3 more)
IBM Lab/: Deep_Learning_Keras_Part_A.ipynb  Deep_Learning_Keras_Part_B.ipynb  Deep_Learning_Keras_Part_C.ipynb  Deep_Learning_Keras_Part_D.ipynb  IBMDeveloperSkillsNetwork-ML0101EN-SkillsNetwork_labs_Module 2_ML0101EN-Reg-Mulitple-Linear-Regression-Co2.jupyterlite.ipynb  IBMDeveloperSkillsNetwork-ML0101EN-SkillsNetwork_labs_Module 3_ML0101EN-Clas-Decision-Trees-drug.jupyterlite.ipynb  ML0101EN-Clas-K-Nearest-neighbors-CustCat.jupyterlite.ipynb
Python-Playground/: Dropout_Classification_ML_Project.ipynb  README.md
TypeScriptPlayground/: .eslintrc.cjs  README.md  bun.lockb  package-lock.json  package.json  tsconfig.json
(+122 files in other folders)
